<resources>
    <string name="app_name">Task List Management</string>

    <string name="finance_department">Finance Department</string>
    <string name="username"> Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account">Not yet have an account</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already having an account</string>
    <string name="logout">Logout</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="add_task">Add Task</string>
    <string name="all_task">All Task</string>

</resources>
