<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/rsz_moeys"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo_moeys"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:src="@drawable/moeys_logo" />

    <TextView
        android:id="@+id/app_names_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/logo_moeys"
        />

    <TextView
        android:id="@+id/finance_depart_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_centerHorizontal="true"
        android:text="@string/finance_department"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/app_names_txt"/>
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/colorWhite"
        android:hint="@string/username"
        android:backgroundTint="@color/colorWhite"
        android:layout_below="@id/finance_depart_txt"/>
    <EditText
        android:id="@+id/pw_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/colorWhite"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorWhite"
        android:layout_below="@id/edt_username"/>

    <ImageButton
        android:id="@+id/khmer_icon"
        android:layout_width="84dp"
        android:layout_height="43dp"
        android:layout_below="@id/pw_edt"
        android:layout_marginLeft="80dp"
        android:scaleType="fitXY"
        android:src="@drawable/khmerflage_icon" />

    <ImageButton
        android:id="@+id/usa_icon"
        android:layout_width="84dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/khmer_icon"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/american_flag" />

    <TextView
        android:id="@+id/khmer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/khmer_icon"
        android:layout_marginStart="100dp"
        android:text="Khmer"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/usa_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/khmer_icon"
        android:layout_marginEnd="100dp"
        android:text="English"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_above="@+id/no_acc_txt"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccentLightBlue"
        android:textColor="@color/colorWhite"
        android:text="@string/login" />

    <TextView
        android:id="@+id/no_acc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_register"
        android:layout_centerHorizontal="true"
        android:text="@string/no_account"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@color/colorAccentLightBlue"
        android:text="@string/register"
        android:textColor="@color/colorWhite" />





</RelativeLayout>